fragment_second created to show user choice between outdoor and indoor activity. images are clickable, navigates back to first fragment for now.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="last_name">Etternavn</string>
     <string name="phone_number">Mobilnummer</string>
     <string name="helper_text_required">Påkrevd felt*</string>
+    <string name="btn_outdoor">Utendørs</string>
+    <string name="btn_indoor">Innendørs</string>
+    <string name="text_choose_activity">Velg type aktivitet du vil registrere</string>
+    <string name="textview_indoor">Innendørsaktivitet</string>
+    <string name="textview_outdoor">Utendørsaktivitet</string>
 </resources>
