program_type fragment and program_type_item for recycler view added. Recycler view, must be populated with data from api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="text_choose_activity">Velg type aktivitet du vil registrere</string>
     <string name="textview_indoor">Innendørsaktivitet</string>
     <string name="textview_outdoor">Utendørsaktivitet</string>
+    <string name="button_back">Tilbake</string>
 </resources>
