--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="klar_kom_i_form">Gjør deg klar til å komme i form!</string>
     <string name="registrer_ny_bruker">Registrer ny bruker</string>
     <string name="first_name">Fornavn</string>
+    <string name="birth_year">Fødselsår</string>
+    <string name="email">Epost</string>
     <string name="register_text">Registrer deg for å komme i gang med din treningsplan:</string>
     <string name="last_name">Etternavn</string>
     <string name="phone_number">Mobilnummer</string>
