Add MyProgramsFragment and navigation to the fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="no_registered_exercises">Du har ikke lagret noen øvelser. Opprett ny øvelse</string>
     <string name="take_new_picture">Ta nytt bilde</string>
     <string name="my_programs">Mine treningsprogram</string>
+    <string name="nav_my_exercises">Mine øvelser</string>
+    <string name="nav_my_programs">Mine programmer</string>
+    <string name="nav_logout">Logg ut</string>
+
 </resources>
