Implemented add button and edit button to Exercise-items in recyclerView, currently button clicks only show a toast. Visible in MyExercisesFragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="user_program_name">Program navn</string>
     <string name="app_program_type_description">Program beskrivelse</string>
     <string name="personal_description">Hvordan følte du deg?</string>
+    <string name="program_exercises">Programøvelser:</string>
 
 </resources>
