--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,6 @@
     <string name="tc_choose_exercises">Velg øvelser du vil legge til i programmet:</string>
     <string name="bt_save_program">Lagre Program</string>
     <string name="bt_my_programs">Mine treningsprogram</string>
+    <string name="tv_bruke_gps">Bruke GPS?</string>
 
 </resources>
