--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,7 @@
     <string name="bt_save_program">Lagre Program</string>
     <string name="bt_my_programs">Mine treningsprogram</string>
     <string name="tv_bruke_gps">Bruke GPS?</string>
+    <string name="tv_timing_text">Timing: %s</string>
+
 
 </resources>
