chosen AppProgramType is now accessed and used in newProgramFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="tv_bruke_gps">Bruke GPS?</string>
     <string name="tv_timing_text">Timing: %s</string>
     <string name="create_new_program">Lag Nytt Program</string>
+    <string name="btn_delete_program">Slett Program</string>
 
 
 </resources>
