--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,10 +53,22 @@
     <string name="tv_timing_text">Timing: %s</string>
     <string name="create_new_program">Lag Nytt Program</string>
     <string name="btn_delete_program">Slett Program</string>
-    <string name="menu_create_new">Opprett ny</string>
+    <string name="menu_create_new">Opprett Ny</string>
     <string name="program">Program</string>
-    <string name="new_session">Start en økt</string>
+    <string name="new_session">Start et Program</string>
     <string name="new_exercise">Øvelse</string>
 
+    <!-- TITLES -->
+    <string name="title_login">Velkommen</string>
+    <string name="title_my_programs">Mine Program</string>
+    <string name="title_my_statistics">Mine Øvelser</string>
+    <string name="title_my_exercises">Exercise Tracker</string>
+    <string name="title_new_exercise">Ny Øvelse</string>
+    <string name="title_new_program">Nytt Program</string>
+    <string name="title_program_details">Programdetaljer</string>
+    <string name="title_program_session">Aktiv Økt</string>
+    <string name="title_session_details">Treningsdata</string>
+    <string name="title_program_type">Programtype</string>
+    <string name="title_second_fragment">Exercise Tracker</string>
 
 </resources>
