Added popUpBackstack when navigating to current fragment in toolbar-navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,5 +93,6 @@
     <string name="newSessionButton">Registrer treningsøkt</string>
     <string name="button_update_exercise">Oppdater Øvelse</string>
     <string name="button_update_program">Oppdater Program</string>
+    <string name="home">Hjem</string>
 
 </resources>
