--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,5 +91,9 @@
     <string name="timeYear">%s</string>
     <string name="countYear">%s stykk</string>
     <string name="newSessionButton">Registrer treningsøkt</string>
+    <string name="userStats">Treningshistorikk</string>
+    <string name="totalDistance">Distanse: %skm</string>
+    <string name="sessionProgramName">Program navn: %s</string>
+    <string name="sessionHeight">Høyde: %sm</string>
 
 </resources>
