added more elements to fragment_session_Details. using cardView to update theme colors later

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,5 +98,8 @@
     <string name="button_update_exercise">Oppdater Øvelse</string>
     <string name="button_update_program">Oppdater Program</string>
     <string name="home">Hjem</string>
+    <string name="distance">Distanse</string>
+    <string name="time">Tid</string>
+    <string name="height">Høyde</string>
 
 </resources>
