Added option in toolbar to refresh data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,5 +101,6 @@
     <string name="distance">Distanse</string>
     <string name="time">Tid</string>
     <string name="height">Høyde</string>
+    <string name="refresh_data">Oppdater data</string>
 
 </resources>
