--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,7 +77,7 @@
     <string name="time7days">%s</string>
     <string name="timeScale">Historikk tidshintervall</string>
     <string name="sessionCount">Total antall treningsøkter</string>
-    <string name="trainingTime">Total treningstid (hh:mm:ss)</string>
+    <string name="trainingTime">%s</string>
     <string name="last30days">30 dager</string>
     <string name="time30days">%s</string>
     <string name="count30days">%s stykk</string>
