--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="time7days">%s</string>
     <string name="timeScale">Historikk tidshintervall</string>
     <string name="sessionCount">Total antall treningsøkter</string>
+    <string name="trainingTimeText">Total treningstid (hh:mm:ss)</string>
     <string name="trainingTime">%s</string>
     <string name="last30days">30 dager</string>
     <string name="time30days">%s</string>
@@ -110,5 +111,6 @@
     <string name="delete_program">Slett Program</string>
     <string name="confirmation_delete_program">Vil du slette programmet for godt?</string>
     <string name="failed_to_load_exercises">Kunne ikke laste øvelser</string>
+    <string name="startupLoading">Laster inn ...</string>
 
 </resources>
