--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="you_have_no_sessions">Du har ikke registrert noen treningsøkter enda. Kom i gang nå!</string>
     <string name="nav_my_sessions">Mine treningsøkter</string>
     <string name="tv_no_exercises">Du har ikke registrert noen øvelser enda. Opprett ny øvelse for å komme i gang,</string>
-    <string name="tc_choose_exercises">Velg øvelser du vil legge til i programmet:</string>
+    <string name="tc_choose_exercises">Legg til øvelser:</string>
     <string name="bt_save_program">Lagre Program</string>
     <string name="bt_my_programs">Mine treningsprogram</string>
     <string name="tv_bruke_gps">Bruke GPS?</string>
@@ -94,8 +94,10 @@
     <string name="userStats">Treningshistorikk</string>
     <string name="totalDistance"> %skm</string>
     <string name="sessionProgramName"> %s</string>
-    <string name="sessionHeight"> %sm</string>
-    <string name="sessionSpeed"> %s km/t</string>
+    <string name="sessionHeight"> %s moh.</string>
+    <string name="sessionSpeed">%s km/t</string>
+    <string name="sessionSpeedMax">%s km/t</string>
+    <string name="sessionSpeedAvg">%s km/t</string>
     <string name="button_update_exercise">Oppdater Øvelse</string>
     <string name="button_update_program">Oppdater Program</string>
     <string name="home">Hjem</string>
@@ -110,5 +112,9 @@
     <string name="delete_program">Slett Program</string>
     <string name="confirmation_delete_program">Vil du slette programmet for godt?</string>
     <string name="failed_to_load_exercises">Kunne ikke laste øvelser</string>
+    <string name="average">Average</string>
+    <string name="max">Max</string>
+    <string name="start">Start</string>
+    <string name="edit">Rediger</string>
 
 </resources>
