updated layout, views, colors and styles.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,5 +118,6 @@
     <string name="start">Start</string>
     <string name="edit">Rediger</string>
     <string name="startupLoading">Laster inn ...</string>
+    <string name="completed_sessions">Gjennomførte økter</string>
 
 </resources>
