sessionDetails layout update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,5 +120,6 @@
     <string name="startupLoading">Laster inn ...</string>
     <string name="completed_sessions">Gjennomførte økter</string>
     <string name="update_program">Oppdater Program</string>
+    <string name="fart">Fart</string>
 
 </resources>
