replay session done, delete-session button visible in ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,5 +121,7 @@
     <string name="completed_sessions">Gjennomførte økter</string>
     <string name="update_program">Oppdater Program</string>
     <string name="fart">Fart</string>
+    <string name="delete">Slett</string>
+    <string name="replay_Session">Gjenta økt</string>
 
 </resources>
