--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,5 +123,6 @@
     <string name="fart">Fart</string>
     <string name="delete">Slett</string>
     <string name="replay_Session">Gjenta økt</string>
+    <string name="exercises">Treningsøvelser</string>
 
 </resources>
