--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,5 +124,7 @@
     <string name="delete">Slett</string>
     <string name="replay_Session">Gjenta økt</string>
     <string name="exercises">Treningsøvelser</string>
+    <string name="timing_yes">Tidtaking: Ja</string>
+    <string name="timing_no">Tidtaking: Nei</string>
 
 </resources>
